--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#courses">Courses</a></li>
         <li><a href="#gallery">Gallery</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#contat">Contact</a></li>
       </ul>
     </nav>
   </header>
